# fast_app

./: Dockerfile  docker-compose.yml  pyproject.toml  readme.md  requirements.txt
fast_app/: main.py
fast_app/db/: item.py
fast_app/models/: item.py
fast_app/utils/: helper.py
tests/: test_fast_app.py
