# pyproject.toml

[build-system]
requires = ["setuptools>=67.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fast_app"
version = "1.0.0"

dependencies = [
    "fastapi==0.109.2",
    "uvicorn==0.27.1",
    "sqlalchemy==2.0.26",
    "httpx==0.26.0"
    

]

[project.optional-dependencies]
dev = [
    "pytest==8.0.0",
    "bandit",
    "black",
    "flake8",
    "isort",
    "pylint",
    "pytest",
    "pytest-timeout",
    "requests",
]